Rebuild the tree in Java when fetching elements
Signed-off-by: BOUTIER Charly <charly.boutier@rte-france.com>